--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
         </div>
       </div>
     </section>
+    <body>
 
       <h1>Book Tech Help Time</h1>
     
@@ -239,7 +240,6 @@
           await stripe.redirectToCheckout({ sessionId: id });
         });
       </script>
-
     <!-- Contact Section -->
     <section id="contact" class="contact" aria-labelledby="contact-heading">
       <div class="container">
