--- a/bot.html
+++ b/bot.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="MaximumRaw Inc. provides managed IT services, cybersecurity solutions, and data backup & recovery services for businesses.">
+  <title>MaximumRaw Inc. | Managed IT Services</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" sizes="16x16" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" sizes="32x32" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" sizes="48x48" type="image/x-icon">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Tech Help Time</title>
@@ -45,16 +59,10 @@
     }
     .footer a { color: #0077cc; text-decoration: underline; }
   </style>
+
 </head>
-
-
-
-
-
-
-
 <body>
-
+  
   <h1>Book Tech Help Time</h1>
 
   <div class="card">
@@ -156,5 +164,18 @@
       await stripe.redirectToCheckout({ sessionId: id });
     });
   </script>
+      
+      <div class="footer-bottom">
+        <p>&copy; 2025 MaximumRaw Inc. All rights reserved.</p>
+        <ul class="legal-links">
+          <li><a href="/privacy">Privacy Policy</a></li>
+          <li><a href="/terms">Terms of Service</a></li>
+          <li><a href="/sitemap">Sitemap</a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
