--- a/bot.html
+++ b/bot.html
@@ -61,6 +61,27 @@
   </style>
 
 </head>
+</head>
+<body>
+  <header>
+    <nav class="navbar" aria-label="Main navigation">
+      <div class="logo">
+        <a href="/" aria-label="MaximumRaw Home">
+          <img src="logo.svg" alt="MaximumRaw Logo" width="150" height="40">
+        </a>
+      </div>
+      <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle menu">
+        <span class="sr-only">Menu</span>
+        <span class="hamburger"></span>
+      </button>
+      <ul id="primary-menu" class="nav-links">
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact" class="nav-cta">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
 <body>
   
   <h1>Book Tech Help Time</h1>
