--- a/bot.html
+++ b/bot.html
@@ -82,6 +82,8 @@
       </ul>
     </nav>
   </header>
+
+  <main>
   <h1>Book Tech Help Time</h1>
 
   <div class="card">
@@ -184,17 +186,20 @@
     });
   </script>
       
-      <div class="footer-bottom">
-        <p>&copy; 2025 MaximumRaw Inc. All rights reserved.</p>
-        <ul class="legal-links">
-          <li><a href="/privacy">Privacy Policy</a></li>
-          <li><a href="/terms">Terms of Service</a></li>
-          <li><a href="/sitemap">Sitemap</a></li>
-        </ul>
-      </div>
     </div>
-  </footer>
+  </div>
+  
+  <div class="footer-bottom">
+    <p>&copy; 2025 MaximumRaw Inc. All rights reserved.</p>
+    <ul class="legal-links">
+      <li><a href="/privacy">Privacy Policy</a></li>
+      <li><a href="/terms">Terms of Service</a></li>
+      <li><a href="/sitemap">Sitemap</a></li>
+    </ul>
+  </div>
+</div>
+</footer>
 
-  <script src="script.js" defer></script>
+<script src="script.js" defer></script>
 </body>
 </html>
