--- a/connect.html
+++ b/connect.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Tech Help Time</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="MaximumRaw Inc. provides managed IT services, cybersecurity solutions, and data backup & recovery services for businesses.">
+  <title>MaximumRaw Inc. | Managed IT Services</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" sizes="16x16" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" sizes="32x32" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" sizes="48x48" type="image/x-icon">
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
     body {
       font-family: sans-serif;
@@ -60,12 +74,30 @@
       .flatpickr-calendar {
         left: 0 !important;
         transform: none !important;
-        width: 100%;
+        width: 50%;
       }
     }
   </style>
 </head>
-
+<header>
+    <nav class="navbar" aria-label="Main navigation">
+      <div class="logo">
+        <a href="/" aria-label="MaximumRaw Home">
+          <img src="logo.svg" alt="MaximumRaw Logo" width="150" height="40">
+        </a>
+      </div>
+      <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle menu">
+        <span class="sr-only">Menu</span>
+        <span class="hamburger"></span>
+      </button>
+      <ul id="primary-menu" class="nav-links">
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About Us</a></li>
+        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#contact" class="nav-cta">Contact Us</a></li>
+      </ul>
+    </nav>
+  </header>
 <body>
 
   <h1>Book Tech Help Time</h1>
@@ -178,5 +210,20 @@
       await stripe.redirectToCheckout({ sessionId: id });
     });
   </script>
+        </div>
+    </div>
+    
+    <div class="footer-bottom">
+      <p>&copy; 2025 MaximumRaw Inc. All rights reserved.</p>
+      <ul class="legal-links">
+        <li><a href="/privacy">Privacy Policy</a></li>
+        <li><a href="/terms">Terms of Service</a></li>
+        <li><a href="/sitemap">Sitemap</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+<script src="script.js" defer></script>
 </body>
 </html>
