--- a/connect.html
+++ b/connect.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Book Tech Help Time</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="MaximumRaw Inc. provides managed IT services, cybersecurity solutions, and data backup & recovery services for businesses.">
   <title>MaximumRaw Inc. | Managed IT Services</title>
   <link rel="stylesheet" href="styles.css">
@@ -14,17 +12,21 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" sizes="16x16" type="image/x-icon">
-  <link rel="icon" href="/favicon.ico" sizes="32x32" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" sizes="48x48" type="image/x-icon">
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <style>
     body {
       font-family: sans-serif;
-      max-width: 600px;
-      margin: auto;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
       padding: 2rem;
+      box-sizing: border-box;
+    }
+    .container {
+      max-width: 600px;
+      width: 100%;
     }
     h1, h2 {
       text-align: center;
@@ -56,6 +58,7 @@
       text-align: center;
       font-size: 0.8rem;
       color: #555;
+      margin-top: 1rem;
     }
     .footer a { color: #0077cc; text-decoration: underline; }
     
@@ -79,54 +82,67 @@
     }
   </style>
 </head>
-<header>
-    <nav class="navbar" aria-label="Main navigation">
-      <div class="logo">
-        <a href="/" aria-label="MaximumRaw Home">
-          <img src="logo.svg" alt="MaximumRaw Logo" width="150" height="40">
-        </a>
-      </div>
-      <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle menu">
-        <span class="sr-only">Menu</span>
-        <span class="hamburger"></span>
-      </button>
-      <ul id="primary-menu" class="nav-links">
-        <li><a href="#services">Services</a></li>
-        <li><a href="#about">About Us</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
-        <li><a href="#contact" class="nav-cta">Contact Us</a></li>
-      </ul>
-    </nav>
-  </header>
 <body>
+  <div class="container">
+    <header>
+      <nav class="navbar" aria-label="Main navigation">
+        <div class="logo">
+          <a href="/" aria-label="MaximumRaw Home">
+            <img src="logo.svg" alt="MaximumRaw Logo" width="150" height="40">
+          </a>
+        </div>
+        <button class="mobile-menu-toggle" aria-expanded="false" aria-controls="primary-menu" aria-label="Toggle menu">
+          <span class="sr-only">Menu</span>
+          <span class="hamburger"></span>
+        </button>
+        <ul id="primary-menu" class="nav-links">
+          <li><a href="#services">Services</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#contact" class="nav-cta">Contact Us</a></li>
+        </ul>
+      </nav>
+    </header>
 
-  <h1>Book Tech Help Time</h1>
+    <h1>Book Tech Help Time</h1>
 
-  <div class="card">
-    <h2>1. Choose Duration</h2>
-    <div class="grid" id="time-options"></div>
+    <div class="card">
+      <h2>1. Choose Duration</h2>
+      <div class="grid" id="time-options"></div>
+    </div>
+
+    <div class="card">
+      <h2>2. Pick Date & Time</h2>
+      <input type="text" id="calendar" placeholder="Select date and time" />
+    </div>
+
+    <div class="card">
+      <h2>3. Enter Your Email</h2>
+      <input type="email" id="email" placeholder="you@example.com" />
+    </div>
+
+    <div style="text-align:center">
+      <button id="checkoutBtn" disabled>Continue to Payment</button>
+    </div>
+
+    <p class="footer">
+      By booking, you agree to our
+      <a href="/privacy">Privacy Policy</a> and
+      <a href="/terms">Terms of Service</a>.
+      Questions? <a href="mailto:support@example.com">Email us</a>.
+    </p>
   </div>
 
-  <div class="card">
-    <h2>2. Pick Date & Time</h2>
-    <input type="text" id="calendar" placeholder="Select date and time" />
-  </div>
-
-  <div class="card">
-    <h2>3. Enter Your Email</h2>
-    <input type="email" id="email" placeholder="you@example.com" />
-  </div>
-
-  <div style="text-align:center">
-    <button id="checkoutBtn" disabled>Continue to Payment</button>
-  </div>
-
-  <p class="footer">
-    By booking, you agree to our
-    <a href="/privacy">Privacy Policy</a> and
-    <a href="/terms">Terms of Service</a>.
-    Questions? <a href="mailto:support@example.com">Email us</a>.
-  </p>
+  <footer>
+    <div class="footer-bottom">
+      <p>&copy; 2025 MaximumRaw Inc. All rights reserved.</p>
+      <ul class="legal-links">
+        <li><a href="/privacy">Privacy Policy</a></li>
+        <li><a href="/terms">Terms of Service</a></li>
+        <li><a href="/sitemap">Sitemap</a></li>
+      </ul>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://js.stripe.com/v3/"></script>
@@ -210,20 +226,5 @@
       await stripe.redirectToCheckout({ sessionId: id });
     });
   </script>
-        </div>
-    </div>
-    
-    <div class="footer-bottom">
-      <p>&copy; 2025 MaximumRaw Inc. All rights reserved.</p>
-      <ul class="legal-links">
-        <li><a href="/privacy">Privacy Policy</a></li>
-        <li><a href="/terms">Terms of Service</a></li>
-        <li><a href="/sitemap">Sitemap</a></li>
-      </ul>
-    </div>
-  </div>
-</footer>
-
-<script src="script.js" defer></script>
 </body>
 </html>
