--- a/ja/index.html
+++ b/ja/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Johnn Anthony | Enterprise IT & Security Consultant</title>
+  <title>Johnn Anthony | SMB IT & Security Consultant</title>
   <style>
     :root {
       --primary: #2563eb;
@@ -860,7 +860,7 @@
       <div class="footer-content">
         <div class="footer-logo">
           <h2>JOHNN <span>ANTHONY</span></h2>
-          <p>Enterprise IT & Security Consultant</p>
+          <p>SMB IT & Security Consultant</p>
         </div>
         <div class="social-links">
           <a href="#"><i class="fab fa-linkedin-in"></i></a>
