--- a/ja/index.html
+++ b/ja/index.html
@@ -575,7 +575,7 @@
 
   <section class="hero">
     <div class="container">
-      <h1>Enterprise IT & Security Solutions</h1>
+      <h1>SMB IT & Security Solutions</h1>
       <p>Certified IT Systems Administrator and Network Security Specialist with over 10 years of experience in enterprise infrastructure, virtualization, and cybersecurity. Delivering secure, scalable, and resilient IT environments for modern businesses.</p>
       <div>
         <a href="#contact" class="btn">Schedule a Consultation</a>
